tests/paczka1/small_fuzzy/55118372.err
Error in line 8: RkqAfKZ S893 58,0
Error in line 11: 4egN95XNaW7 A54 60,2
